--- a/assets/sass/layout/_preloader.scss
+++ b/assets/sass/layout/_preloader.scss
@@ -31,14 +31,26 @@
             transform: translate(-50%, -50%) scale(0);
             z-index: 1;
 
-            animation: arrow 1.8s alternate 2 forwards; 
+            animation: arrow 1.8s alternate infinite forwards; 
 
         }
     }
 
+    .logo-container {
+        width: 0;
+        height: 40px;
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        animation: text 1.8s alternate infinite forwards;
+    }
+
     img {
-        width: calc(100% - 40px);
-        animation: text 1.8s alternate 2 forwards;
+        width: calc(300px - 40px);
+        height: 40px;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 }
 
@@ -66,18 +78,22 @@
 
 @keyframes text {
     0% {
-        clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+        width: 0;
     }
     25% {
-        clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+        width: 0;
     }
 
     50% {
-        clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+        width: 0;
         transform: translateX(30px);
     }
     
     75% {
-        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+        width: calc(300px - 40px);
+    }
+
+    100% {
+        width: calc(300px - 40px);
     }
 }
